--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "nftmaker-bot",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js",
+    "start": "ts-node dist/index.js",
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
     "axios": "^0.25.0",
-    "express": "^4.17.2"
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
